# golden-calendar

./: .gitignore  LICENSE  README.md  index.js  package-lock.json  package.json  schema.js  server.js  style.css  validator.js  wrangler.jsonc
GoldenCalendar-Core/: CMakeLists.txt
GoldenCalendar-Core/include/: ChronologyEngine.h  Date.h  DayEngine.h  Epoch.h  EpochGenerator.h  EpochManager.h  EpochSegment.h  LunarEngine.h  SolarEngine.h
GoldenCalendar-Core/src/: ChronologyEngine.cpp  DayEngine.cpp  Epoch.cpp  EpochGenerator.cpp  EpochManager.cpp  EpochSegment.cpp  LunarEngine.cpp  SolarEngine.cpp  main.cpp
api/: golden-day.js
engine/: ChronologySearchEngine.js  GoldenTimeEngine.js  GoldenTimeEngineV2.js  TemporalSearchEngine.js
engines/: Golden50KGenerator.js  GoldenBatchGenerator.js  GoldenChronologyEngine.js  MasterArchiveGenerator.js  MasterProgressManager.js  PrintableYearGenerator.js  TemporalGenerator.jsnano  YearGenerator.js
monitor/: AutoRecovery.js  CacheMonitor.js  EngineHealthMonitor.js  GuardianSystem.js  MaintenanceScheduler.js  PerformanceMonitor.js
public/: app.js  index.html  style.css  validation.html
tests/: all_batch_day_index_test.js  archive_generator_test.js  archive_index_test.js  archive_reader_test.js  archive_validator_test.js  batch_day_index_test.js  batch_generator_test.js  batch_index_test.js  batch_reader_test.js  calendar_search_test.js  chronology_search_test.js  chronology_test.js  database_test.js  day_archive_reader_test.js  day_index_reader_test.js  day_index_test.js  final_50000_test.js  final_archive_read_test.js  (+16 more)
(+16 files in other folders)
